--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 /* Basic Reset and Font Import */
 body {
     margin: 0;
-    font-family: 'Poppins', Arial, Helvetica, sans-serif;
-    background-color: #121212; /* Dark Mode Background */
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    background-color: #121212;
     color: #f0f0f0;
     line-height: 1.6;
     scroll-behavior: smooth;
 }
+
 
 /* Typography */
 h1, h2 {
@@ -201,4 +202,5 @@ nav ul a:hover {
   transform: translateY(-5px) scale(1.05);
   box-shadow: 0 8px 20px rgba(244, 180, 238, 0.6);
 }
+
 
