--- a/style.css
+++ b/style.css
@@ -2,21 +2,16 @@
 body {
     margin: 0;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    background-color: #121212;
+    background-color: #121212; /* Dark Mode Background */
     color: #f0f0f0;
     line-height: 1.6;
     scroll-behavior: smooth;
 }
 
-
 /* Typography */
 h1, h2 {
     font-weight: 700;
     color: #f4b4ee; /* A bright, vibrant color */
-}
-h1, h2, h3, .logo, .skill-card {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-weight: 700;
 }
 
 /* Nav Bar */
@@ -206,6 +201,3 @@ nav ul a:hover {
   transform: translateY(-5px) scale(1.05);
   box-shadow: 0 8px 20px rgba(244, 180, 238, 0.6);
 }
-
-
-
